--- a/terms.html
+++ b/terms.html
@@ -76,15 +76,15 @@
       transform: translateY(-1px);
       border-color: rgba(255, 255, 255, 0.18);
     }
-    .hero {
-      max-width: 1080px;
-      margin: 48px auto 32px;
-      padding: 0 20px;
-      display: grid;
-      gap: 18px;
-      grid-template-columns: 1.1fr 0.9fr;
-      align-items: center;
-    }
+.hero {
+  max-width: 1080px;
+  margin: 48px auto 32px;
+  padding: 0 20px;
+  display: grid;
+  gap: 18px;
+  grid-template-columns: 1fr;
+  align-items: center;
+}
     .hero-card {
       background: linear-gradient(145deg, var(--card), var(--card-strong));
       border: 1px solid rgba(255, 255, 255, 0.06);
